--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ninazu/framework",
-  "minimum-stability": "stable",
+  "version": "0.0.1",
   "require": {
-    "swiftmailer/swiftmailer": "v6.1.3"
+	"swiftmailer/swiftmailer": "v6.1.3"
   }
 }
